<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagenPersonaje"
        android:layout_width="216dp"
        android:layout_height="233dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="-24dp"
        android:contentDescription="@string/app"
        app:srcCompat="@drawable/chicobestia" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="234dp"
        android:background="#B655C6"
        android:lineSpacingExtra="24sp"
        android:onClick="Jugar"
        android:text="@string/play"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRecord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="100dp"
        android:background="#81FFFFFF"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="#F48FB1"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="#5D116A"
        android:textCursorDrawable="@android:color/white"
        android:textSize="24sp" />

</RelativeLayout>